@@ -41,6 +41,25 @@ $SMARTY->assign('objectid', $result['id']);
 $nlist = $DB->GetAll("SELECT * FROM netdevices WHERE netnodeid=? ORDER BY name", array($id));
 $SMARTY->assign('netdevlist', $nlist);
 
+$queue = $LMS->GetQueueContents(null, null, null, null, -1, null, null, null, $id);
+$queue_count = $queue['total'];
+unset($queue['total']);
+unset($queue['state']);
+unset($queue['order']);
+unset($queue['direction']);
+unset($queue['owner']);
+unset($queue['removed']);
+unset($queue['priority']);
+
+$SMARTY->assign('queue', $queue);
+$SMARTY->assign('queue_count', $queue_count);
+$SMARTY->assign('queue_netnodeid', $id);
+
+$start = 0;
+$pagelimit = ConfigHelper::getConfig('phpui.ticketlist_pagelimit', $queue_count);
+$SMARTY->assign('start', $start);
+$SMARTY->assign('pagelimit', $pagelimit);
+
 $SMARTY->display('netnode/netnodeinfo.html');
 
 ?>
