@@ -22,4 +22,7 @@
 {block name=netdevradiosectors}
 	{include file="netdev/radiosectors.html"}
 {/block}
+{block name=netdevtickets}
+        {include file="netdev/netdevtickets.html"}
+{/block}
 {/block}
