@@ -13,5 +13,10 @@
 			{include file="netnode/netnodedevices.html"}
 		</TD>
 	</TR>
+	<TR>
+		<TD style="width: 100%;">
+			{include file="netnode/netnodetickets.html"}
+		</TD>
+	</TR>
 </TABLE>
 {/block}
