@@ -13,6 +13,8 @@ version ?.??.?? (????-??-??):
   - enhancement: added support for helpdesk notification for event add form [chilan]
   - enhancement: invoices.hide_expositor - variable to hide expositor in pdf invoice generated by tcpdf [interduo]
   - enhancement: invoices.show_customerid - variable to show customerid in pdf invoice generated by tcpdf [interduo]
+  - enhancement: list assigned tickets in netdevinfo [interduo]
+  - enhancement: list assigned tickets in netnodeinfo [interduo]
 
 version 1.11.23 (2018-03-21):
 
